<resources>
    <string name="app_name" translatable="false">Healthy85</string>
    <string name="amount_hint">Input food weight(Units: g) </string>
    <string name="choose">Add food</string>
    <string name="calories">cal</string>
    <string name="choose_date">choose date</string>
    <string name="foodName">Food name</string>
    <string name="input_food_name">Input food name</string>
    <string name="foodCalories">Calories /g</string>
    <string name="input_food_calories">Input food calories</string>
    <string name="add_document">A D D</string>
    <string name="Grains">Grains/beans</string>
    <string name="vegetable">Vegetables</string>
    <string name="fruit">fruit</string>
    <string name="Meat">meat</string>
    <string name="eggs">eggs</string>
    <string name="aquatic">The aquatic</string>
    <string name="dairy">dairy</string>
    <string name="oil">fat</string>
    <string name="snack">Pastry snacks</string>
    <string name="sugar">sugar</string>
    <string name="drinks">drinks</string>
    <string name="fungus">The fungus algae</string>
    <string name="elsee">ELSE</string>
    <string name="history">history</string>

    <string name="tracer_85">Tracer 85</string>
    <string name="search">search</string>
    <string name="input_search">search food</string>
    <string name="yearrr">input year like 2000</string>
    <string name="yea">年</string>
    <string name="mmmo">input like 6 or 12</string>
    <string name="mmmm">月</string>
    <string name="ddddd" translatable="false">input like 6 or 30</string>
    <string name="dday">日</string>
    <string name="Hello">健 康 生 活 第 一 步 </string>

    <string-array name="year1">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>

    <string-array name="month1">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>

    <string-array name="day1">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>


</resources>
