<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_my_list2"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="com.swufe.healthy85.HistoryActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/yearrr"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yea"
            android:textSize="20sp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mmmo"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/textM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmmm"
            android:textSize="20sp"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ddddd"

            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dday"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />


</LinearLayout>