<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    tools:context="com.swufe.healthy85.MainActivity">

    <TextView
        android:id="@+id/app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/tracer_85"

        android:textColor="@color/colorbtn"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorbtn"
            android:onClick="Click"
            android:textSize="15sp"
            android:textColor="@color/btn_text"
            android:text="@string/choose_date"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/btn_food"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorbtn"
            android:onClick="openOne"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:text="@string/choose"
            android:textColor="@color/btn_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/showFood"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/amount_hint"
        android:inputType="number|numberDecimal"
        android:textSize="20dp"

        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/showOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/calories"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:background="@color/colorbtn"
        android:onClick="onClick"
        android:text="SAVE"
        android:textSize="20sp"
        android:textColor="@color/btn_text"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="274dp"
        app:srcCompat="@mipmap/bg3"


        />


</LinearLayout>